2008-06-28  Juanma Barranquero  <lekktu@gmail.com>

	* net/sasl.el (sasl-client-set-property, sasl-make-mechanism)
	(sasl-find-mechanism, sasl-next-step):
	* net/sasl-ntlm.el (sasl-ntlm-steps, sasl-ntlm-request)
	(sasl-ntlm-response): Fix typos in docstrings.

2008-06-28  robert marshall  <robert@capuchin.co.uk>  (tiny change)

	* international/mule-cmds.el (view-hello-file): Doc fix.

2008-06-28  Chong Yidong  <cyd@stupidchicken.com>

	* faces.el (inhibit-face-set-after-frame-default): Var deleted.
	(set-face-attribute, face-set-after-frame-default)): Don't use it.

2008-06-28  John Paul Wallington  <jpw@pobox.com>

	* calc/calc.el (defmath): Add `doc-string' decl.  Add docstring.

2008-06-28  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-file-modes): Handle symlinks.
	(tramp-convert-file-attributes): Convert symlinks only when
	returned from `tramp-handle-file-attributes-with-stat'.

	* net/tramp-ftp.el (top): Delete 'ange-ftp property from
	`substitute-in-file-name' when unloading.
	(tramp-ftp-file-name-handler): Set `tramp-mode' to nil.

2008-06-28  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-dir.el (vc-dir-hide-up-to-date): Also hide empty directories.
	(vc-string-prefix-p): Move function ...
	* vc.el (vc-string-prefix-p): ... here.

2008-06-27  Juanma Barranquero  <lekktu@gmail.com>

	* vc-dir.el (vc-dir): Complete only directory names.

2008-06-27  Jason Rumney  <jasonr@gnu.org>

        * w32-fns.el (top-level): Unconditionally define all charsets.

2008-06-27  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-mode.el (c-mode-base-map): Don't bind C-M-[ae] to
	the CC Mode specific functions; this is no longer needed, since
	{beginning,end}-of-defun now pass ARG to ...-of-defun-function.

	* progmodes/cc-defs.el (c-emacs-features): New feature
	'argumentative-bod-function.

2008-06-27  John Paul Wallington  <jpw@pobox.com>

	* chistory.el (list-command-history): Use `bound-and-true-p'.